--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,8 @@ pylint:
   stage: Static Analysis
   before_script:
     - python --version
-    - pylint --vesrion
+    - pip install pylint
+    - pylint --version
     - pip install -r ci/requirements.txt
   script:
     - bash -c 'shopt -s globstar nullglob; pylint3 --exit-zero **/*.py'
