--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,6 @@ pylint:
     - pip --version
     - pip install pylint
     - pylint --version
-    - sudo apt-get install libgirepository1.0-dev
+    - apt-get install libgirepository1.0-dev
   script:
     - bash -c 'shopt -s globstar nullglob; pylint3 --exit-zero **/*.py'
