--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,3 +1,3 @@
 # WARNING: These requirements are for use by the CI system only (gitlab.com)
 # Otherwise, use the system package manager to ensure utmost security
-PyGObject
+#PyGObject # pip fails to install this package
