--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ shellcheck:
   stage: Static Analysis
   before_script:
     - shellcheck --version
+    - apt-get update
+    - apt-get -y install bash
     - bash --version
   script:
     - bash -c 'shopt -s globstar nullglob; shellcheck --external-sources --source-path=SCRIPTDIR **/*.sh'
@@ -23,4 +25,4 @@ pylint:
     - pylint --version
     - pip install -r ci/requirements.txt
   script:
-    - bash -c 'shopt -s globstar nullglob; pylint3 --exit-zero **/*.py'
+    - bash -c 'shopt -s globstar nullglob; pylint --exit-zero **/*.py'
