--- a/rpm_spec/qubes-video-companion.spec.in
+++ b/rpm_spec/qubes-video-companion.spec.in
@@ -14,6 +14,7 @@ BuildArch:      noarch
 
 BuildRequires:  pandoc
 Requires:       gstreamer1-plugins-good
+Requires:       python3
 
 %description
 Qubes Video Companion is a tool for securely streaming webcams and sharing
@@ -54,11 +55,12 @@ make DESTDIR=%{?buildroot} install-vm install-license
 %{_sysconfdir}/qubes-rpc/qvc.Webcam
 %{_sysconfdir}/qubes-rpc/qvc.ScreenShare
 %{_datadir}/qubes-video-companion/video/setup.sh
-%{_datadir}/qubes-video-companion/video/receiver.sh
+%{_datadir}/qubes-video-companion/video/receiver.py
 %{_datadir}/qubes-video-companion/video/destroy.sh
 %{_datadir}/qubes-video-companion/video/common.sh
-%{_datadir}/qubes-video-companion/ui/ui.sh
-%{_datadir}/qubes-video-companion/ui/main.py
+%{_datadir}/qubes-video-companion/ui/service.py
+%{_datadir}/qubes-video-companion/ui/webcam.py
+%{_datadir}/qubes-video-companion/ui/screenshare.py
 %{_datadir}/qubes-video-companion/ui/user_interface.py
 %{_datadir}/qubes-video-companion/ui/notification.py
 %{_datadir}/qubes-video-companion/ui/tray_icon.py
