debian: fix typo

--- a/debian/control
+++ b/debian/control
@@ -30,5 +30,5 @@ Description: Securely stream webcams and share screens across virtual machines
  computational resources and low latency even at Full HD and greater resolutions
  at 30 or more frames per second.
  .
- This package contains all components of Qubes Video companion excluding the
+ This package contains all components of Qubes Video Companion excluding the
  Qubes RPC policies which dom0 enforces.
